--- a/Home page 2.css
+++ b/Home page 2.css
@@ -591,11 +591,167 @@ img{
     text-align: center;
 }
 
+.our-services-grid{
+    margin-bottom: 120px;
+    grid-column-gap: 80px;
+    grid-row-gap: 60px;
+    -ms-grid-rows: auto 60px auto;
+    grid-template-areas: ". . ."
+    ". . .";
+    -ms-grid-columns: 1fr 80px 1fr 80px 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.section-heading-wrap{
+    margin-top: 80px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+
+.service-icon{
+    margin-bottom: 30px;
+}
+
+.status-message{
+    padding: 9px 30px;
+    background-color: #202020;
+    color: #fff;
+    font-size: 14px;
+    line-height: 26px;
+    text-align: center;
+}
+
+.status-message.cc-success-message{
+    background-color: #12b878;
+}
+
+.status-message.cc-error-message{
+    background-color: #db4b68;
+}
+
+.status-message.cc-no-data{
+    display: block;
+    width: 70%;
+    margin: 100px auto;
+}
+
+.contact-form-wrap{
+    padding: 45px 50px 50px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #eee;
+}
+
+.contact-form-grid{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    -webkit-box-align: start;
+    -webkit-align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
+    grid-column-gap: 80px;
+    grid-row-gap: 30px;
+    grid-template-areas: ". .";
+    -ms-grid-columns: 2.5fr 80px 1fr;
+    grid-template-columns: 2.5fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+}
+
+.home-content-wrap{
+    margin-top: 80px;
+    margin-bottom: 120px;
+}
+
+.home-section-wrap{
+    margin-bottom: 30px;
+}
+
+.section-heading{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+.intro-text{
+    width: 80%;
+    margin-right: auto;
+    margin-bottom: 35px;
+    margin-left: auto;
+}
+
+.collection-wrap{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: -15px;
+    padding-bottom: -15px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: start;
+    -webkit-align-items:flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start; 
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+}
+
+.work-heading{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+.blog-heading{
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.blog-preview-wrap{
+    width: 33.33%;
+    padding-right: 45px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+}
+
+.collection-list-wrapper{
+    margin-bottom: 120px;
+}
+
+.business-article-heading{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.business-article-heading:hover{
+    opacity: 0.8;
+}
+
+.business-article-heading:active{
+    opacity: 0.7;
+}
+
+
+
+
 #w-node-_firstBigNumber{
+    grid-column: 2;
     -ms-grid-column: 2;
     grid-column-start: 2;
     -ms-grid-column-span: 1;
     grid-column-end: 3;
+    grid-row: 1;
     -ms-grid-row: 1;
     grid-row-start: 1;
     -ms-grid-row-span: 1;
@@ -604,8 +760,10 @@ img{
 
 @media screen and (max-width: 991px){
     #w-node-_firstBigNumber{
+        grid-column: 1;
         -ms-grid-column: 1;
         grid-column-start: 1;
+        grid-row: 1;
         -ms-grid-row: 1;
         grid-row-start: 1;
         -ms-grid-column-span: 1;
