--- a/Home page 2.css
+++ b/Home page 2.css
@@ -418,12 +418,14 @@ img{
 .navigation-item{
     padding-top: 9px;
     padding-bottom: 9px;
+    padding: 20px;
     opacity: 0.6;
     font-size: 12px;
     line-height: 20px;
     font-weight: 500;
     letter-spacing: 1px;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .navigation-item:hover{
