--- a/Home page 2.css
+++ b/Home page 2.css
@@ -426,6 +426,7 @@ img{
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
+    font-size: 15px;
 }
 
 .navigation-item:hover{
